# open-screen-studio

./: README.md  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: events.rs  mod.rs  screen.rs  session.rs
src-tauri/src/commands/: editing.rs  export.rs  mod.rs  recording.rs  system.rs
src-tauri/src/models/: effects.rs  events.rs  mod.rs  project.rs
src-tauri/src/processing/: background.rs  compositor.rs  cursor.rs  encoder.rs  mod.rs  zoom.rs
src-tauri/src/utils/: paths.rs
src/components/editor/: EditorView.test.tsx  EditorView.tsx  EffectsPanel.test.tsx  EffectsPanel.tsx  ExportDialog.test.tsx  ExportDialog.tsx  Preview.tsx  Timeline.tsx
src/components/recording/: RecordingControls.test.tsx  RecordingControls.tsx  SourceSelector.test.tsx  SourceSelector.tsx
src/components/ui/: Button.test.tsx  Button.tsx  SelectField.test.tsx  SelectField.tsx  SliderField.test.tsx  SliderField.tsx
src/hooks/: useExport.ts  useProject.ts  useRecording.ts
src/lib/: constants.test.ts  constants.ts  format.test.ts  format.ts  tauri.ts
src/stores/: editorStore.test.ts  editorStore.ts  recordingStore.test.ts  recordingStore.ts
src/styles/: globals.css
src/test/: setup.ts  tauri-mock.ts
