[package]
name = "open-screen-place"
version = "0.1.0"
description = "Open-source Screen Studio alternative"
authors = ["Open Screen Place Contributors"]
edition = "2021"

[lib]
name = "open_screen_place_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
image = "0.25"
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSArray", "NSDictionary"] }
block2 = "0.6"
dispatch = "0.2"
thiserror = "2"
libc = "0.2"
